--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ form{
     display: flex;
     flex-direction: column;
     padding: 0vw 4vw 2vw 4vw;
-    width: 90%;
+    width: 20%;
     max-width: 600px;
     border-radius: 10px;
     align-items: center;
@@ -180,6 +180,7 @@ form input, form textarea {
     background: #C5AF9F;
     font-size: 15px;
     width: 100%;
+    border-radius: 30px;
 }
 
 form .input-submit {
