--- a/style.css
+++ b/style.css
@@ -5,6 +5,20 @@ body{
     height: 100%;
 }
 
+.section::-webkit-scrollbar {
+    width: 16px;
+  }
+  
+  .section::-webkit-scrollbar-track {
+    background-color: #e4e4e4;
+    border-radius: 100px;
+  }
+  
+  .section::-webkit-scrollbar-thumb {
+    background-color: #d4aa70;
+    border-radius: 100px;
+  }
+
 /* NAV */
 
 nav {
@@ -153,7 +167,6 @@ p {
     background-color: #23463F;
     display: flex;
     width: 100%;
-    height: 73vh;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -194,6 +207,11 @@ form .input-submit {
     cursor: pointer;
     width: 150px;
     border-radius: 30px;
+}
+
+form textarea {
+    height: 100px;
+    resize: none;
 }
 
 form ::placeholder {
